k8s/manifests/service.yaml
# Service for the application
apiVersion: v1
kind: Service
metadata:
  name: Go-Web-App 
  labels:
    app: Go-Web-App
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: Go-Web-App 
  type: ClusterIP
