k8s/manifests/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Go-Web-App 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: Go-Web-App .local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: Go-Web-App 
            port:
              number: 80
